feat: a lot of changes
